<resources>
    <string name="app_name">Story App</string>
    <string name="password_hint">Enter password</string>
    <string name="input_password_error">Enter at least 6 characters without white space at the beginning and end. (%1$d/6)</string>
    <string name="email_hint">Enter email address</string>
    <string name="input_email_error">Invalid email address format</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back To Login</string>
    <string name="register">Register</string>
    <string name="login_copywriter">Log in and start to share your experience</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="ask_to_register">Not have an account yet?</string>
    <string name="ask_already_account">Already have an account?</string>
    <string name="register_copywriter">Register and start to share your experience</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="name_error">Name is still empty or invalid</string>
    <string name="close">Close</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="connection_problem">Internet connection problem</string>
    <string name="registering_message">Currently registering your account</string>
    <string name="message_on_login">Trying to login to your account</string>
    <string name="change_language">Change language</string>
    <string name="logout">Logout</string>
    <string name="by">By: %1$s</string>
    <string name="story">Story</string>
    <string name="upload_date">Uploaded %1$s</string>
    <string name="writers_name">Writer\'s name</string>
    <string name="refresh">Refresh</string>
    <string name="no_data_available">No data to display</string>
    <string name="no_temporary_data">Unable to display data. Pull the screen down to refresh.</string>
    <string name="unknown">Unknown</string>
    <string name="load_more">Load more</string>
    <string name="story_notpad_hint">Write your story here…</string>
    <string name="story_notes">Story Notes</string>
    <string name="upload">Upload</string>
    <string name="failed_to_open_camera">Sorry dude, failed to open the camera</string>
    <string name="user_does_not_give_camera_permission">You don\'t allow this app to access the camera</string>
    <string name="flash_is_not_available">No flash unit on %1$s</string>
    <string name="front_camera_position">front camera</string>
    <string name="main_camera_position">main camera</string>
    <string name="failed_to_take_pictures">Failed to take pictures</string>
    <string name="select_image">Select image</string>
    <string name="uploading_your_story">Please wait… Uploading your story</string>
    <string name="take_picture">Take picture</string>
    <string name="switch_lighting">Switch lighting</string>
    <string name="switch_camera_mode">Switch camera mode</string>
    <string name="flash_mode">Set to take photo with flash mode</string>
    <string name="no_flash_mode">Set to take photo mode without flash</string>
    <string name="auto_flash_mode">Set to take photo mode with auto flash</string>
    <string name="flashlight_mode">Set to take photo mode with flash as flashlight</string>
    <string name="to_front_camera_mode">Set to front camera mode</string>
    <string name="to_rear_camera_mode">Set to main camera mode</string>
    <string name="story_illustration_image">Story illustration image</string>
    <string name="take_pictures_with_camera">Take pictures with camera</string>
    <string name="take_pictures_from_files">Take pictures from files</string>
    <string name="create_a_new_story">Create a new story</string>
    <string name="open_advanced_menu">Open advanced menu</string>
    <string name="login_to_account_now">Login to your account now</string>
    <string name="login_button_not_available">The login button is not available as long as the form is not valid</string>
    <string name="register_your_new_account">Register your new account</string>
    <string name="register_button_not_available">The register button is not available as long as the form is not valid</string>
    <string name="uploaded_on">Uploaded on %1$s</string>
    <string name="uploaded_by">Uploaded by %1$s</string>
    <string name="refresh_again">Refresh again</string>
    <string name="close_refresh_dialog">Close refresh dialog</string>
    <string name="close_response_dialog">Close response dialog</string>
    <string name="written_by">Written by %1$s</string>
    <string name="title_activity_home_bottom_navigation" translatable="false">HomeBottomNavigationActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_create_options" translatable="false">Create Story Options</string>
    <string name="preference_settings">Preference</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="camera">Camera</string>
    <string name="camera_and_gps">Camera and GPS</string>
    <string name="make_a_simple_story">Make A Simple Story</string>
    <string name="create_stories_with_your_geolocation">Create Stories With Your Geolocation</string>
    <string name="display_configuration">Display Configuration</string>
    <string name="display_orientation">Display Orientation</string>
    <string name="display">Display</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_settings">Appearance Settings</string>
    <string name="or">Or</string>
    <string name="permissions_storage_etc">Permissions, Storage, etc.</string>
    <string name="more_menu">More Menu</string>
    <string name="create_story">Create Story</string>
    <string name="story_maps">Story Maps</string>
    <string name="story_list">Story List</string>
    <string name="geolocation_stories">Geolocation Stories</string>
    <string name="more">More</string>
    <string name="login_since">Logged in %1$s</string>
    <string name="paging_error">"Oops… An error occurred. Try it soon!"</string>
    <string name="empty_story_list">There are no stories</string>
    <string name="you_are_in_offline_mode">You are in offline mode</string>
    <string name="system">System</string>
    <string name="map_mode">Map Mode</string>
    <string name="hybrid">Satellite</string>
    <string name="night">Night Map</string>
    <string name="normal">Normal Map</string>
    <string name="location_unknown">Location Unknown</string>
</resources>