<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_story_list">

    <fragment
        android:id="@+id/navigation_story_list"
        android:name="com.fikri.submissionstoryappbpai.fragment.home_ui_item.story_list.StoryListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_story_list" />

    <fragment
        android:id="@+id/navigation_story_maps"
        android:name="com.fikri.submissionstoryappbpai.fragment.home_ui_item.story_maps.StoryMapsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_story_maps" />

    <fragment
        android:id="@+id/navigation_create_story_options"
        android:name="com.fikri.submissionstoryappbpai.fragment.home_ui_item.create_story_options.CreateStoryOptionsFragment"
        android:label="@string/title_create_options"
        tools:layout="@layout/fragment_create_story_options" />

    <fragment
        android:id="@+id/navigation_more_menu"
        android:name="com.fikri.submissionstoryappbpai.fragment.home_ui_item.more_menu.MoreMenuFragment"
        android:label="@string/more_menu"
        tools:layout="@layout/fragment_more_menu" />

</navigation>