<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="?android:color"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_illustration"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_illustration"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="8"
                android:textAlignment="center"
                android:textColor="?android:textColorSecondary"
                android:textSize="16sp"
                tools:text="@string/success" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_message"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.fikri.submissionstoryappbpai.custom_component.ButtonApp
                    android:id="@+id/btn_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/refresh_again"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/refresh" />

                <com.fikri.submissionstoryappbpai.custom_component.ButtonApp
                    android:id="@+id/btn_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/close_refresh_dialog"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/close" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>