<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".activity.CameraShotActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/pv_camera_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_shoot"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_camera_schoot"
        android:clickable="true"
        android:contentDescription="@string/take_picture"
        android:focusable="true"
        android:foreground="@drawable/fg_circle_button"
        android:padding="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/iv_flash"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_camera_feature"
        android:clickable="true"
        android:contentDescription="@string/switch_lighting"
        android:focusable="true"
        android:foreground="@drawable/fg_circle_button"
        android:padding="12dp"
        android:src="@drawable/ic_flash_off"
        app:layout_constraintBottom_toBottomOf="@+id/iv_shoot"
        app:layout_constraintEnd_toStartOf="@+id/iv_shoot"
        app:layout_constraintTop_toTopOf="@+id/iv_shoot"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/iv_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/bg_camera_feature"
        android:clickable="true"
        android:contentDescription="@string/to_front_camera_mode"
        android:focusable="true"
        android:foreground="@drawable/fg_circle_button"
        android:padding="12dp"
        android:src="@drawable/ic_camera_switch"
        app:layout_constraintBottom_toBottomOf="@+id/iv_shoot"
        app:layout_constraintStart_toEndOf="@+id/iv_shoot"
        app:layout_constraintTop_toTopOf="@+id/iv_shoot"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>