<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:color"
    android:fillViewport="true"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="770dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/logo_wrapper"
            android:layout_width="143dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:transitionName="logo_wrapper"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toTopOf="@+id/container" />

        <View
            android:id="@+id/divider"
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_desc" />

        <ImageView
            android:id="@+id/iv_logo_frame"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:src="@drawable/storybox_logo_frame"
            android:transitionName="logo_frame"
            app:layout_constraintBottom_toBottomOf="@+id/logo_wrapper"
            app:layout_constraintStart_toStartOf="@+id/logo_wrapper"
            app:layout_constraintTop_toTopOf="@+id/logo_wrapper"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:alpha="1"
            android:src="@drawable/storybox_logo_text"
            android:transitionName="logo_text"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo_frame"
            app:layout_constraintEnd_toEndOf="@+id/logo_wrapper"
            app:layout_constraintTop_toTopOf="@+id/iv_logo_frame"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_logo_spot"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="28dp"
            android:adjustViewBounds="true"
            android:alpha="1"
            android:src="@drawable/storybox_logo_spot"
            android:transitionName="logo_spot"
            app:layout_constraintStart_toStartOf="@+id/iv_logo_frame"
            app:layout_constraintTop_toTopOf="@+id/iv_logo_frame"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_logo_feather"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:adjustViewBounds="true"
            android:src="@drawable/storybox_logo_feather"
            android:transitionName="logo_feather"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo_frame"
            app:layout_constraintTop_toTopOf="@+id/iv_logo_frame"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register"
            android:textColor="@color/primary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/logo_wrapper" />

        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/register_copywriter"
            android:textAlignment="center"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name_label"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/form_field_cust"
            android:elevation="6dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/name_hint"
            android:includeFontPadding="false"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_label"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email_label"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/et_register_name" />

        <com.fikri.submissionstoryappbpai.custom_component.EmailFormField
            android:id="@+id/et_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/form_field_cust"
            android:elevation="6dp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_label" />

        <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password_label"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

        <com.fikri.submissionstoryappbpai.custom_component.PasswordFormField
            android:id="@+id/et_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/form_field_cust"
            android:elevation="6dp"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

        <com.fikri.submissionstoryappbpai.custom_component.ButtonApp
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:enabled="false"
            android:fontFamily="@font/poppins"
            android:foreground="@drawable/fg_button"
            android:includeFontPadding="false"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/et_register_password"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_ask_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/ask_already_account"
            android:textAlignment="center"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="#00000000"
            android:fontFamily="@font/poppins_medium"
            android:foreground="@drawable/fg_button"
            android:paddingVertical="0dp"
            android:stateListAnimator="@null"
            android:text="@string/back_to_login"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/tv_ask_login"
            tools:ignore="TouchTargetSizeCheck,UnusedAttribute" />

        <Button
            android:id="@+id/btn_appearance"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#00000000"
            android:drawableLeft="@drawable/ic_display_config"
            android:drawableTint="?android:textColorSecondary"
            android:fontFamily="@font/poppins"
            android:foreground="@drawable/fg_circle_button"
            android:includeFontPadding="false"
            android:paddingVertical="0dp"
            android:stateListAnimator="@null"
            android:text="@string/appearance"
            android:textAllCaps="false"
            android:textColor="?android:textColorSecondary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck,UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>